[package]
name = "tdigest-ch"
version = "0.1.0"
edition = "2021"
description = "A Rust library for estimating quantiles in a stream, using ClickHouse t-digest data structure."
repository = "https://github.com/vivienm/rust-tdigest-ch"
documentation = "https://vivienm.github.io/rust-tdigest-ch/docs/tdigest_ch/"
license = "MIT"

[dependencies]
serde = { version = "1.0.171", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.103"

[features]
serde = ["dep:serde"]
